<!-- telegram-bot-api-lib/pom.xml -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.w3.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>it.marcodemartino</groupId>
    <artifactId>telegram-bot-api-lib</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>fluent-bot-api-generator</module>
        <module>fluent-bot-api-library</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>exec-one</id>
                            <phase>compile</phase> <!-- You can remove or change this to "compile" if it should only run after the project is compiled -->
                            <configuration>
                                <mainClass>it.marcodemartino.fluentbotapi.Main</mainClass>
                            </configuration>
                            <goals>
                                <goal>java</goal> <!-- Use "java" to run a Java class -->
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
